# ipc.rlib

./: .gitignore  Cargo.toml  README.md
src/: header.rs  info.rs  lib.rs  module.rs  notifythread.rs  util.rs
src/helpers/: metadata.rs
test_data/: header_ansi.txt
test_data/FRBAmericanCursive-SOURCE.ufo/: metainfo.plist
tests/: header.rs  mod.rs
tests/helpers/: metadata.rs
