[package]
name = "mfek-ipc"
version = "0.0.0-beta1"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
description = "Modular Font Editor K (MFEK) inter-process communication library."
edition = "2018"

[dependencies]
## Our crates
# parses .glif files and gives us a place to put arbitrary data
glifparser = { git = "https://github.com/MFEK/glifparser.rlib", branch = "master", default-features = false }
#glifparser = { path = "../glifparser.rlib", default-features = false } # for development

# Logging
log = "0.4"
# Notify
notify = "4"
# Serde
serde_json = { version = "1.0" }
serde = "1.0"
# Header
figlet-rs = "0.1"
colored = "2"
atty = "0.2"

[dev-dependencies]
test-log = "0.2"
env_logger = "*"
